# relevance-of-words

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  CMakeProject.cpp  test.cpp
main/project/: core.cpp  core.h
main/project/function/: converter_JSON.cpp  converter_JSON.h
main/project/function/auxiliary_resource/: index.h  inverted_index.cpp  inverted_index.h  print_JSON.cpp  print_JSON.h  search_server.cpp  search_server.h
main/project/function/auxiliary_resource/global_resource/: manager.h
program/: answers.json  config.json  requests.json
program/resources/: file001.txt  file003.txt  file004.txt  file005.txt
